# EnsRef_Exdata

./: .gitignore  Makefile  Makefile.in  README.md  config.h  config.h.in  configure  configure.in  ensRefEx.c  error.c  error.h  func.c  func.h  main.c
examples/: Fig2.sh  Fig3.sh  J3_HN_HA.py  J3_HN_HA_6LYT_100nsopt_vs_exp.gp  J3_HN_HA_ave.txt  J3_HN_HA_weight.py  div_vs_chi.gp  epmparam  exp_6LYT.txt  list_pairs_6LYT.txt  merge_sim_exp.sh
